# cosmicclarity

./: LICENSE  Makefile  README.md  SASP_data.fits  SetiAStroCosmicClarityDenoise.js  SetiAstroCosmicClarity.js  SetiAstroCosmicClarity.py  SetiAstroCosmicClarityMac.py  SetiAstroCosmicClarity_SuperRes.py  SetiAstroCosmicClarity_denoise.py  SetiAstroCosmicClarity_denoise.spec  SetiAstroCosmicClarity_denoise_nonCUDA.py  SetiAstroCosmicClarity_satellitelinux.py  SetiAstroFullSharp.py  WhatsInMySky.py  XISFViewer.py  astrobin_filters.csv  astrosuite.icns  celestial_catalog.csv  denoise_cnn.pth  denoise_model.py  fix_importlib_metadata.py  nonstellar_sharp_cnn_radius_1.pth  nonstellar_sharp_cnn_radius_2.pth  nonstellar_sharp_cnn_radius_4.pth  nonstellar_sharp_cnn_radius_8.pth  numba_utils.py  pickle  pyinstaller xisf  pyproject.toml  requirements.txt  satellite.icns  satelliteremoval.pth  satelliteremoval128featuremaps.pth  setiastrobenchmark.py  setiastrobenchmark.spec  setiastrocosmicclarity.spec  setiastrocosmicclarity_darkstar.py  setiastrocosmicclarity_darkstar.spec  setiastrocosmicclarity_darkstarmac.py  (+34 more)
models/: nonstellar_sharp_cnn_radius_1.pth  nonstellar_sharp_cnn_radius_4.pth  sharp_cnn_radius_1.pth
src/setiastro/cosmicclarity/: SetiAstroCosmicClarity.py  SetiAstroCosmicClarity_denoise.py  denoise_model.py  sharp_model_nonstellar.py  sharp_model_normal.py
